--- a/src/scss/material-photo-gallery.scss
+++ b/src/scss/material-photo-gallery.scss
@@ -1,3 +1,5 @@
+$duration: .5s;
+
 .m-p-g {
 	
 	&__thumbs {
@@ -6,7 +8,7 @@
 			margin: 0;
 			float: left;
 			vertical-align: bottom;
-			transition: all .4s cubic-bezier(0.23, 1, 0.32, 1);
+			transition: all $duration cubic-bezier(0.23, 1, 0.32, 1);
 			cursor: pointer;
 			z-index: 1;
 			position: relative;
@@ -44,7 +46,7 @@
 		background: rgba(black, 0.95);
 		visibility: hidden;
 		opacity: 0;
-		transition: all .4s cubic-bezier(0.23, 1, 0.32, 1);
+		transition: all $duration cubic-bezier(0.23, 1, 0.32, 1);
 		will-change: opacity, visibility;
 
 		&.active {
@@ -86,11 +88,10 @@
 		width: 100%;
 		z-index: 200;
 		height: 20vh;
-		background: -webkit-linear-gradient(bottom, transparent 0%, rgba(0, 0, 0, 0.35) 100%);
 		background: linear-gradient(to top, transparent 0%, rgba(black, 0.55) 100%);
 		opacity: 0;
 		visibility: hidden;
-		transition: all .4s cubic-bezier(0.23, 1, 0.32, 1);
+		transition: all $duration cubic-bezier(0.23, 1, 0.32, 1);
 		
 		&.active {
 			opacity: 1;
@@ -141,7 +142,6 @@
 			position: absolute;
 			top: 3vh;
 			left: 3vw;
-			padding: 15px;
 			z-index: 5;
 			cursor: pointer;
 			-webkit-tap-highlight-color: rgba(black, 0);
