--- a/src/scss/material-photo-gallery.scss
+++ b/src/scss/material-photo-gallery.scss
@@ -14,7 +14,7 @@ $duration: .5s;
 			position: relative;
 			opacity: 0;
 			-webkit-tap-highlight-color: rgba(black, 0);
-			filter: brightness(90%);
+			// filter: brightness(90%);
 			will-change: opacity, transform;
 			
 			&.active {
@@ -69,7 +69,7 @@ $duration: .5s;
 			max-width: 100%;
 			visibility: hidden;
 			z-index: 60;
-			-webkit-filter: saturate(0%);
+			// -webkit-filter: saturate(0%);
 
 			&.active {
 				visibility: visible;
