--- a/src/scss/material-photo-gallery.scss
+++ b/src/scss/material-photo-gallery.scss
@@ -1,7 +1,7 @@
 $duration: .5s;
 
 .m-p-g {
-	max-width: 800px;
+	max-width: 860px;
 	margin: 0 auto;
 	
 	&__thumbs {
@@ -10,26 +10,25 @@ $duration: .5s;
 			margin: 0;
 			float: left;
 			vertical-align: bottom;
-			transition: all $duration cubic-bezier(0.23, 1, 0.32, 1);
 			cursor: pointer;
 			z-index: 1;
 			position: relative;
 			opacity: 0;
+			filter: brightness(100%);
 			-webkit-tap-highlight-color: rgba(black, 0);
-			// filter: brightness(90%);
 			will-change: opacity, transform;
+			transition: all $duration cubic-bezier(0.23, 1, 0.32, 1);
 			
 			&.active {
 				z-index: 50;
 			}
-
-			&.hide {
-				transition-delay: 0.25s;
-				opacity: 0;
-			}
 			
 			&.layout-completed {
 				opacity: 1;
+			}
+
+			&.hide {
+				opacity: 0;
 			}
 			
 			&:hover {
@@ -52,7 +51,8 @@ $duration: .5s;
 		transition:
 			background .25s ease-out,
 			visibility .01s .5s linear;
-		will-change: opacity, visibility;
+		will-change: background, visibility;
+		backface-visibility: hidden;
 
 		&.active {
 			transition:
@@ -71,10 +71,20 @@ $duration: .5s;
 			max-height: 100vh;
 			max-width: 100%;
 			visibility: hidden;
+			will-change: visibility;
+			transition: opacity 0.5s ease-out;
 
 			&.active {
 				visibility: visible;
-				transition: transform .6s cubic-bezier(0.23, 1, 0.32, 1);
+				opacity: 1 !important;
+				transition:
+					transform .5s cubic-bezier(0.23, 1, 0.32, 1),
+					opacity 0.5s ease-out;
+			}
+
+			&.almost-active {
+				opacity: 0;
+				transform: translate3d(0,0,0) !important;
 			}
 			
 			&.prev {
