--- a/src/scss/material-photo-gallery.scss
+++ b/src/scss/material-photo-gallery.scss
@@ -1,7 +1,12 @@
-$duration: .5s;
+/*------------------------------------*\
+    MATERIAL PHOTO GALLERY
+\*------------------------------------*/
+
+$gallery-width: 860px;
+$transition-duration: 0.5s;
 
 .m-p-g {
-	max-width: 860px;
+	max-width: $gallery-width;
 	margin: 0 auto;
 	
 	&__thumbs {
@@ -17,7 +22,7 @@ $duration: .5s;
 			filter: brightness(100%);
 			-webkit-tap-highlight-color: rgba(black, 0);
 			will-change: opacity, transform;
-			transition: all $duration cubic-bezier(0.23, 1, 0.32, 1);
+			transition: all $transition-duration cubic-bezier(0.23, 1, 0.32, 1);
 			
 			&.active {
 				z-index: 50;
@@ -50,7 +55,7 @@ $duration: .5s;
 		visibility: hidden;
 		transition:
 			background .25s ease-out,
-			visibility .01s .5s linear;
+			visibility .01s $transition-duration linear;
 		will-change: background, visibility;
 		backface-visibility: hidden;
 
@@ -72,29 +77,19 @@ $duration: .5s;
 			max-width: 100%;
 			visibility: hidden;
 			will-change: visibility;
-			transition: opacity 0.5s ease-out;
+			transition: opacity $transition-duration ease-out;
 
 			&.active {
 				visibility: visible;
 				opacity: 1 !important;
 				transition:
-					transform .5s cubic-bezier(0.23, 1, 0.32, 1),
-					opacity 0.5s ease-out;
+					transform $transition-duration cubic-bezier(0.23, 1, 0.32, 1),
+					opacity $transition-duration ease-out;
 			}
 
 			&.almost-active {
 				opacity: 0;
 				transform: translate3d(0,0,0) !important;
-			}
-			
-			&.prev {
-				transform: translate(-100%, -50%);
-				opacity: 0;
-			}
-			
-			&.next {
-				transform: translate(-0%, -50%);
-				opacity: 0;
 			}
 		}
 	}
@@ -109,7 +104,7 @@ $duration: .5s;
 		background: linear-gradient(to top, transparent 0%, rgba(black, 0.55) 100%);
 		opacity: 0;
 		visibility: hidden;
-		transition: all $duration cubic-bezier(0.23, 1, 0.32, 1);
+		transition: all $transition-duration cubic-bezier(0.23, 1, 0.32, 1);
 		
 		&.active {
 			opacity: 1;
